# ViPERFX_RE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.gradle.kts  settings.gradle
.github/workflows/: build.yml  package-magisk-module.yml
include/hardware/: audio_effect.h
include/hardware/system/: audio.h
module/: customize.sh  module.prop  post-fs-data.sh  update.json
module/common/: install.sh
src/: Effect.cpp  Effect.h  ProcessUnit_FX.cpp  ProcessUnit_FX.h  ViPER4Android.cpp  ViPER4Android.h  ViperContext.cpp  ViperContext.h  constants.h  data.h  main.cpp  main.h  viper.cpp  viper.h
src/cpp/: Effect.cpp  Effect.h  ProcessUnit_FX.cpp  ProcessUnit_FX.h  ViPER4Android.cpp  ViPER4Android.h  constants.h  log.h  viper.cpp  viper.h
src/cpp/effects/: AdaptiveBuffer_F32.h  AnalogX.cpp  AnalogX.h  Cure.cpp  DiffSurround.h  DynamicSystem.cpp  DynamicSystem.h  FETCompressor.h  PlaybackGain.h  Reverberation.h  SoftwareLimiter.h  SpeakerCorrection.h  SpectrumExtend.cpp  SpectrumExtend.h  TubeSimulator.cpp  TubeSimulator.h  VHE.cpp  VHE.h  ViPERBass.h  ViPERClarity.cpp  ViPERClarity.h  ViPERDDC.h
src/cpp/functions/kissfft/: README.md  _kiss_fft_guts.h  kiss_fft.cpp  kiss_fft.h  kiss_fftr.cpp  kiss_fftr.h
src/cpp/utils/: CAllpassFilter.cpp  CCombFilter.h  CRevModel.cpp  CRevModel.h  Crossfeed.cpp  Crossfeed.h  DepthSurround.cpp  DepthSurround.h  DynamicBass.cpp  DynamicBass.h  FixedBiquad.cpp  Harmonic.cpp  Harmonic.h  HiFi.cpp  HighShelf.cpp  HighShelf.h  IIR_1st.cpp  IIR_1st.h  IIR_NOrder_BW_BP.h  IIR_NOrder_BW_LH.h  MultiBiquad.cpp  MultiBiquad.h  NoiseSharpening.cpp  NoiseSharpening.h  PConvSingle_F32.cpp  PConvSingle_F32.h  PassFilter.h  PolesFilter.cpp  PolesFilter.h  Subwoofer.h  TimeConstDelay.cpp  TimeConstDelay.h  WaveBuffer_I32.cpp
src/cpp/viper/: Effect.cpp  Effect.h  ViPER.cpp  ViPER.h  constants.h
src/cpp/viper/effects/: AnalogX.cpp  AnalogX.h  ColorfulMusic.cpp  ColorfulMusic.h  Convolver.cpp  Convolver.h  Cure.cpp  Cure.h  DiffSurround.cpp  DiffSurround.h  DynamicSystem.cpp  DynamicSystem.h  FETCompressor.cpp  FETCompressor.h  FIREqualizer.cpp  FIREqualizer.h  IIRFilter.cpp  IIRFilter.h  PlaybackGain.cpp  PlaybackGain.h  Reverberation.cpp  Reverberation.h  SoftwareLimiter.cpp  SoftwareLimiter.h  SpeakerCorrection.cpp  SpeakerCorrection.h  SpectrumExtend.cpp  SpectrumExtend.h  TubeSimulator.cpp  TubeSimulator.h  VHE.cpp  VHE.h  ViPERBass.cpp  ViPERBass.h  ViPERClarity.cpp  ViPERClarity.h  ViPERDDC.cpp
src/cpp/viper/kissfft/: CMakeLists.txt  kiss_fftnd.c
src/cpp/viper/utils/: AdaptiveBuffer.cpp  AdaptiveBuffer.h  AdaptiveBuffer_F32.cpp  AdaptiveBuffer_F32.h  Biquad.cpp  Biquad.h  CAllpassFilter.cpp  CAllpassFilter.h  CCombFilter.cpp  CCombFilter.h  CRevModel.cpp  CRevModel.h  Crossfeed.cpp  Crossfeed.h  DepthSurround.cpp  DepthSurround.h  DynamicBass.cpp  DynamicBass.h  FIR.cpp  FIR.h  (+38 more)
src/effects/: AnalogX.cpp  AnalogX.h  ColorfulMusic.cpp  ColorfulMusic.h  Convolver.cpp  Convolver.h  Cure.cpp  Cure.h  DepthSurround.cpp  DepthSurround.h  DiffSurround.cpp  DiffSurround.h  DynamicBass.cpp  DynamicBass.h  DynamicSystem.cpp  DynamicSystem.h  Effect.cpp  Effect.h  FETCompressor.cpp  FETCompressor.h  FIREqualizer.cpp  FIREqualizer.h  IIRFilter.cpp  PlaybackGain.cpp  PlaybackGain.h  Reverberation.cpp  Reverberation.h  SpeakerCorrection.cpp  SpeakerCorrection.h  SpectrumExtend.cpp  SpectrumExtend.h  Stereo3DSurround.cpp  Stereo3DSurround.h  TubeSimulator.cpp  TubeSimulator.h  VHE.cpp  VHE.h  ViPERBass.cpp  ViPERBass.h  ViPERClarity.cpp  (+3 more)
src/include/: essential.h
src/main/: AndroidManifest.xml
src/util/: AdaptiveBuffer_FPI32.cpp  AdaptiveBuffer_FPI32.h  AdaptiveBuffer_R32.cpp  AdaptiveBuffer_R32.h  CAllpassFilter.cpp  CAllpassFilter.h  CCombFilter.cpp  CCombFilter.h  CRevModel.cpp  CRevModel.h  Crossfeed.cpp  Crossfeed.h  FFT_R24_F32.cpp  FFT_R24_F32.h  FIR.cpp  FIR.h  FixedBiquad.cpp  FixedBiquad.h  Harmonic.cpp  Harmonic.h  HiFi.cpp  HiFi.h  HighShelf.cpp  HighShelf.h  IIRFilter.h  IIR_1st.cpp  IIR_1st.h  IIR_NOrder_BW_BP.cpp  IIR_NOrder_BW_BP.h  IIR_NOrder_BW_LH.cpp  IIR_NOrder_BW_LH.h  MinPhaseIIRCoeffs.cpp  MinPhaseIIRCoeffs.h  MultiBiquad.cpp  MultiBiquad.h  NoiseSharpening.cpp  NoiseSharpening.h  PConvSingle_F32.cpp  PConvSingle_F32.h  PassFilter.cpp  (+19 more)
src/utils/: CAllpassFilter.cpp  CAllpassFilter.h  CRevModel.cpp  CRevModel.h  Crossfeed.cpp  DynamicBass.cpp  DynamicBass.h  FixedBiquad.cpp  FixedBiquad.h  Harmonic.cpp  HiFi.cpp  HiFi.h  HighShelf.cpp  IIR_1st.cpp  IIR_1st.h  IIR_NOrder_BW_BP.cpp  IIR_NOrder_BW_BP.h  IIR_NOrder_BW_LH.cpp  IIR_NOrder_BW_LH.h  MultiBiquad.cpp  MultiBiquad.h  NoiseSharpening.h  PConvSingle_F32.cpp  PassFilter.cpp  PassFilter.h  PolesFilter.cpp  Subwoofer.cpp  TimeConstDelay.cpp  WaveBuffer_I32.h
src/viper/: ViPER.cpp  ViPER.h  constants.h
src/viper/effects/: AnalogX.cpp  AnalogX.h  ColorfulMusic.cpp  ColorfulMusic.h  Convolver.cpp  Convolver.h  Cure.cpp  Cure.h  DiffSurround.cpp  DiffSurround.h  DynamicSystem.cpp  DynamicSystem.h  FETCompressor.cpp  FETCompressor.h  IIRFilter.cpp  IIRFilter.h  PlaybackGain.cpp  PlaybackGain.h  Reverberation.h  SoftwareLimiter.cpp  SoftwareLimiter.h  SpeakerCorrection.cpp  SpeakerCorrection.h  SpectrumExtend.cpp  SpectrumExtend.h  TubeSimulator.cpp  TubeSimulator.h  VHE.cpp  VHE.h  VHE_L0.h  VHE_L1.h  VHE_L2.h  VHE_L3.h  VHE_L4.h  ViPERBass.cpp  ViPERBass.h  ViPERClarity.cpp  ViPERClarity.h  ViPERDDC.cpp  ViPERDDC.h
src/viper/utils/: AdaptiveBuffer.cpp  AdaptiveBuffer.h  Biquad.cpp  Biquad.h  CAllpassFilter.cpp  CCombFilter.cpp  CCombFilter.h  CRevModel.cpp  CRevModel.h  Crossfeed.cpp  DynamicBass.cpp  FIR.cpp  FIR.h  HiFi.cpp  HiFi.h  HighShelf.cpp  IIR_1st.cpp  IIR_NOrder_BW_BP.cpp  IIR_NOrder_BW_BP.h  IIR_NOrder_BW_LH.cpp  IIR_NOrder_BW_LH.h  MinPhaseIIRCoeffs.cpp  MinPhaseIIRCoeffs.h  MultiBiquad.cpp  MultiBiquad.h  NoiseSharpening.h  PConvSingle.cpp  PConvSingle.h  PConvSingle_F32.h  PassFilter.cpp  PassFilter.h  Polyphase.cpp  Polyphase.h  Stereo3DSurround.cpp  Stereo3DSurround.h  Subwoofer.cpp  TimeConstDelay.cpp  TimeConstDelay.h  WaveBuffer.cpp  WaveBuffer.h
(+2 files in other folders)
